--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,7 +1,7 @@
 baseurl = "/"
 
 # Site title
-title = "Test Site" 
+title = "Test Site"
 
 
 # Copyright
@@ -25,7 +25,7 @@ paginate = 10
 paginatePath = "page"
 
 # Enable Disqus integration
-disqusShortname = "appernetic"
+disqusShortname = "shortname"
 
 [permalinks]
     post = "/:year/:month/:day/:slug/"
@@ -48,7 +48,7 @@ disqusShortname = "appernetic"
 
 [params.popover]
     enablepopover = false #enable or disable popover: true/false.
-    posturl = "https://zapier.com/hooks/catch/1227569/2vcwb6/"
+    posturl = "https://zapier.com/hooks/..." # Your zapier post hook.
     headerimage = "//placehold.it/1000x600"
     expirecookie = 5 #show it again after number of days to visitors that has not subscribed.
     signupheader = "Join Our Newsletter"
@@ -66,7 +66,7 @@ disqusShortname = "appernetic"
 [params]
     # You can use markdown here.
     BrandImage = "http://blog.appernetic.io/images/apperneticlogo.png" #top header brand image.
-    brand = "Appernetic blog" # brand image alt text.
+    brand = "My awsome blog" # brand image alt text.
     topline = "few words about your site"
     footline = "code with <i class='fa fa-heart'></i>"
 
@@ -84,12 +84,12 @@ disqusShortname = "appernetic"
     googleAnalytics = "Your Google Analytics tracking code"
 
     # Sidebar social links.
-    github = "Appernetic" # Your Github profile ID
+    github = "Myprofile" # Your Github profile ID
     bitbucket = "" # Your Bitbucket profile ID
     linkedin = "" # Your LinkedIn profile ID (from public URL)
-    googleplus = "111074595662096336201" # Your Google+ profile ID
-    facebook = "Appernetic" # Your Facebook profile ID
-    twitter = "Appernetic" # Your Twitter profile ID
+    googleplus = "+Myprofile" # Your Google+ profile ID
+    facebook = "Myprofile" # Your Facebook profile ID
+    twitter = "Myprofile" # Your Twitter profile ID
     youtube = ""  # Your Youtube channel ID
     flattr = ""  # populate with your flattr uid
 
