--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -48,7 +48,7 @@ disqusShortname = "shortname"
 
 [params.popover]
     enablepopover = true #enable or disable popover: true/false.
-    posturl = "https://zapier.com/hooks/..." # Your zapier post hook.
+    posturl = "https://zapier.com/hooks/" # Your zapier post hook.
     headerimage = "//placehold.it/1000x600"
     expirecookie = 5 #show it again after number of days to visitors that has not subscribed.
     signupheader = "Join Our Newsletter"
