i18n, moved menu data  to config file

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,14 +1,15 @@
+# hostname (and path) to the root eg. https://appernetic.github.io/
 baseurl = "/"
 
-# Site title
-title = "Test Site"
+DefaultContentLanguage = "en"
 
-
-# Copyright
-copyright = "(c) 2016 yourname."
+# If you want all of the languages to be put below their respective language code,
+# enable DefaultContentLanguageInSubdir = true. Without enabling it english content
+# will be in the root and other languages in their respective subfolder such as /sv/.
+# See [Languages] settings at the end of this file.
 
 # Language
-languageCode = "en-EN"
+languageCode = "en"
 
 # SES friendly url:s
 canonifyurls = true
@@ -18,8 +19,7 @@ canonifyurls = true
 metaDataFormat = "toml"
 
 # Theme to use (located in /themes/THEMENAME/)
- theme = "hugo-bootstrap-premium"
-
+theme = "hugo-bootstrap-premium"
 # Pagination
 paginate = 10
 paginatePath = "page"
@@ -27,82 +27,160 @@ paginatePath = "page"
 # Enable Disqus integration
 disqusShortname = "shortname"
 
+
 [permalinks]
-    post = "/:year/:month/:day/:slug/"
-    code = "/:slug/"
+post = "/:year/:month/:day/:slug/"
+code = "/:slug/"
 
 [taxonomies]
-    tag = "tags"
-    topic = "topics"
+tag = "tags"
+topic = "topics"
 
 [author]
-    name = "yourname"
-    email = "yourname@example.com"
+name = "yourname"
+email = "yourname@example.com"
 
 #
 # All parameters below here are optional and can be mixed and matched.
 #
 
 [params.theme]
-    name = "paper"
+name = "paper"
 
 [params.popover]
-    # This is a highly configurable popover form.
-    enablepopover = true #enable or disable popover: true/false.
-    posturl = "https://zapier.com/hooks/catch/1227563/" # Your zapier post hook.
-    headerimage = "//placehold.it/1000x600"
-    expirecookie = 5 #show it again after number of days to visitors that has not subscribed.
-    cookiename = "mycookie1" #give the cookie a unique name variable (avoid spaces and strange characters).
-    signupheader = "Join Our Newsletter"
-    showmodaltimeout = 10000 #show popover modal after time interval in milliseconds.
-    mouseleave = true #show popover when mouse leaves window: true/false.
-    modalsize = "" #lg or sm. Empty is md. If phone is detected lg is used.
-    imagedescription = "Placeholder image for this popover modal optin form"
-    signuptext = "Signup today for free and be the first to get notified on new updates."
-    inputplaceholder = "Enter your email"
-    submitbutton = "Subscribe"
-    successmessage = "Thanks for your subscription!"
-    errormessage = "Submitting form failed!"
-    optin = true #opt-in: true/false
+# This is a highly configurable popover form.
+enablepopover = true #enable or disable popover: true/false.
+posturl = "https://zapier.com/hooks/catch/1227563/" # Your zapier post hook.
+headerimage = "//placehold.it/1000x600"
+expirecookie = 5 #show it again after number of days to visitors that has not subscribed.
+cookiename = "mycookie1" #give the cookie a unique name variable (avoid spaces and strange characters).
+signupheader = "Join Our Newsletter"
+showmodaltimeout = 10000 #show popover modal after time interval in milliseconds.
+mouseleave = true #show popover when mouse leaves window: true/false.
+modalsize = "" #lg or sm. Empty is md. If phone is detected lg is used.
+imagedescription = "Placeholder image for this popover modal optin form"
+signuptext = "Signup today for free and be the first to get notified on new updates."
+inputplaceholder = "Enter your email"
+submitbutton = "Subscribe"
+successmessage = "Thanks for your subscription!"
+errormessage = "Submitting form failed!"
+optin = true #opt-in: true/false
 
 [params]
-    # You can use markdown here.
-    BrandImage = "http://blog.appernetic.io/images/apperneticlogo.png" #top header brand image.
-    brand = "My awsome blog" # brand image alt text.
-    topline = "few words about your site"
-    footline = "code with <i class='fa fa-heart'></i>"
+# You can use markdown here.
+BrandImage = "http://blog.appernetic.io/images/apperneticlogo.png" #top header brand image.
+brand = "My awsome blog" # brand image alt text.
+topline = "few words about your site"
+footline = "code with <i class='fa fa-heart'></i>"
 
-    # Text for the top menu link, which goes to the root URL for the site.
-    # Default (if omitted) is "Home".
-    home = "home"
+# Text for the top menu link, which goes to the root URL for the site.
+# Default (if omitted) is "Home".
+home = "home"
 
-    mailmunchid = "" # Mailmunch site id
-    sumomeid = "" # Sumome id
+mailmunchid = "" # Mailmunch site id
+sumomeid = "" # Sumome id
 
-	   # Show a sidebar menu
-    showRightSidebar = true
-    # Select a syntax highlight.
-    # Check the static/css/highlight directory for options.
-    highlight = "default"
+# Show a sidebar menu
+showRightSidebar = true
+# Select a syntax highlight.
+# Check the static/css/highlight directory for options.
+highlight = "default"
 
-    # Google Analytics.
-    googleAnalytics = "Your Google Analytics tracking code"
+# Google Analytics.
+googleAnalytics = "Your Google Analytics tracking code"
 
-    # Sidebar social links.
-    github = "Myprofile" # Your Github profile ID
-    bitbucket = "" # Your Bitbucket profile ID
-    linkedin = "" # Your LinkedIn profile ID (from public URL)
-    googleplus = "Myprofile" # Your Google+ profile ID
-    facebook = "Myprofile" # Your Facebook profile ID
-    twitter = "Myprofile" # Your Twitter profile ID
-    youtube = ""  # Your Youtube channel ID
-    flattr = ""  # populate with your flattr uid
+# Sidebar social links.
+github = "Myprofile" # Your Github profile ID
+bitbucket = "" # Your Bitbucket profile ID
+linkedin = "" # Your LinkedIn profile ID (from public URL)
+googleplus = "Myprofile" # Your Google+ profile ID
+facebook = "Myprofile" # Your Facebook profile ID
+twitter = "Myprofile" # Your Twitter profile ID
+youtube = ""  # Your Youtube channel ID
+flattr = ""  # populate with your flattr uid
 
 [blackfriday]
-    angledQuotes = true
-    fractions = false
-    hrefTargetBlank = false
-    latexDashes = true
-    plainIdAnchors = true
-    extensions = []
-    extensionmask = []
+angledQuotes = true
+fractions = false
+hrefTargetBlank = false
+latexDashes = true
+plainIdAnchors = true
+extensions = []
+extensionmask = []
+
+# Menus
+# If you want active menu items highlighted for internal pages don't add them here, they need to be added in each files front matter.
+# like this:
+#[menu]
+#     [menu.main]
+#        name = "Showcase"
+#        weight = 3
+#        identifier = "showcase"
+
+[Languages]
+[Languages.en]
+weight = 1
+copyright = "(c) 2016 Copyright my blog"
+title = "My blog" # Site title
+
+[[Languages.en.menu.main]]
+name = "Blog"
+pre = ""
+weight = 2
+identifier = "post"
+url = "/post/"
+
+[[Languages.en.menu.main]]
+name = "About"
+weight = 1
+identifier = ""
+url = "https://appernetic.io/app/#/about"
+pre = "<i class='fa fa-road'></i>"
+
+[[Languages.en.menu.main]]
+name = "Dashboard"
+identifier = ""
+weight = 3
+url = "https://appernetic.io/app/"
+
+[[Languages.en.menu.footer]] # add  links to the bottom right corner.
+name = "Disclaimer"
+pre = "<i>&middot;</i>"
+identifier = "disclaimer"
+weight = 1
+url = "/disclaimer/"
+
+[[Languages.en.menu.footer]]
+name = "Terms"
+identifier = "terms"
+weight = 2
+url = "/terms/"
+
+[Languages.sv]
+weight = 2
+title = "Min blog" # Site title
+copyright = "(c) 2016 Alla rättigheter"
+
+[[Languages.sv.menu.main]]
+name = "Bloggen"
+pre = ""
+weight = 2
+identifier = "post"
+url = "/sv/post/"
+
+[[Languages.sv.menu.footer]] # add  links to the bottom right corner.
+name = "Ansvarsfriskrivning"
+pre = "<i>&middot;</i>"
+identifier = "friskrivning"
+weight = 1
+url = "/sv/friskrivning/"
+
+[[Languages.sv.menu.footer]]
+name = "Vilkor"
+identifier = "vilkor"
+weight = 2
+url = "/sv/vilkor/"
+
+[Languages.sv.taxonomies]
+tag = "Taggar"
+topic = "Ämne"
