--- a/theme.toml
+++ b/theme.toml
@@ -4,7 +4,7 @@ licenselink = "https://github.com/appernetic/hugo-bootstrap-premium/LICENSE.md"
 description = "A hugo theme using bootstrap, bootswatch, font-awesome, highlight.js, a popover email opt-in form and i18n"
 homepage = "https://github.com/appernetic/hugo-bootstrap-premium"
 tags = ["Blog", "Technical", "Personal", "Corporate", "Multilingual", "Bootstrap", "Disqus", "Opt-in form"]
-features = ["Blog", "Technical", "Personal", "Corporate" "Responsive", "Google Analytics", "Bootstrap", "Bootswatch", "font-awesome", "Opt-in form", "Sumome", "Mailmunch","Multilingual", "i18n"]
+features = ["Blog", "Technical", "Personal", "Corporate", "Responsive", "Google Analytics", "Bootstrap", "Bootswatch", "font-awesome", "Opt-in form", "Sumome", "Mailmunch","Multilingual", "i18n"]
 min_version = 0.15
 
 [author]
