Add more instructions

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,6 +1,7 @@
 # hostname (and path) to the root eg. https://appernetic.github.io/
 baseurl = "/"
 
+# Remark if you want to disable multilingual support.
 DefaultContentLanguage = "en"
 
 # If you want all of the languages to be put below their respective language code,
@@ -8,8 +9,10 @@ DefaultContentLanguage = "en"
 # will be in the root and other languages in their respective subfolder such as /sv/.
 # See [Languages] settings at the end of this file.
 
+# Use this languageCode if it's not a multilingual site and also remove all language blocks and menus in the language sections to disable multilingual support.
+# language blocks.
 # Language
-languageCode = "en"
+#languageCode = "en"
 
 # SES friendly url:s
 canonifyurls = true
@@ -128,6 +131,7 @@ extensionmask = []
 
 [Languages]
 [Languages.en]
+languageCode = "en"
 weight = 1
 copyright = "(c) 2016 Copyright my blog"
 title = "My blog" # Site title
@@ -166,6 +170,7 @@ weight = 2
 url = "/terms/"
 
 [Languages.sv]
+languageCode = "sv"
 weight = 2
 title = "Min blog" # Site title
 copyright = "(c) 2016 Alla rättigheter"
