Fix mathjax cdn and make configurable

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -84,6 +84,7 @@ home = "home"
 
 mailmunchid = "" # Mailmunch site id
 sumomeid = "" # Sumome id
+mathjax = "2.7.1" # cdnjs hosted version; empty string to disable mathjax
 
 # Show a sidebar menu
 showRightSidebar = true
