Change :slug to :filename
Change :slug to :filename so that it will work with multilingual content.

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -32,8 +32,8 @@ disqusShortname = "shortname"
 
 
 [permalinks]
-post = "/:year/:month/:day/:slug/"
-code = "/:slug/"
+post = "/:year/:month/:day/:filename/"
+code = "/:filename/"
 
 [taxonomies]
 tag = "tags"
