Change theme.name to bootswatchtheme
Change theme.name to bootswatchtheme and add back the instruction

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -47,9 +47,6 @@ email = "yourname@example.com"
 # All parameters below here are optional and can be mixed and matched.
 #
 
-[params.theme]
-name = "paper"
-
 [params.popover]
 # This is a highly configurable popover form.
 enablepopover = true #enable or disable popover: true/false.
@@ -70,6 +67,12 @@ errormessage = "Submitting form failed!"
 optin = true #opt-in: true/false
 
 [params]
+# bootswatch theme name, unmark and select one: cerulean, cosmo, cyborg, darkly,
+# default, flatly, journal,  lumen, paper, readable, sandstone, simplex,
+# slate, spacelab, superhero, united, yeti.
+
+bootswatchtheme = "paper"
+
 # menu for changing language. This changes languages with js and stores the choice with the help of JavaScript in a Cookie. Then the path is rewritten with pathnamereplace.js. The name of the md files needs to have the same name for each language abbreviation to work correctly. Example: showcase.en.md and showcase.sv.md. It only works if DefaultContentLanguageInSubdir = true
 switchlang = false
 # You can use markdown here.
