--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -110,6 +110,7 @@ facebook = "Myprofile" # Your Facebook profile ID
 twitter = "Myprofile" # Your Twitter profile ID
 youtube = ""  # Your Youtube channel ID
 flattr = ""  # populate with your flattr uid
+email = "" # Show mail in Sidebar
 
 # Enable or disable social sharing icons in posts
 socialsharing = true
