--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -28,8 +28,7 @@ paginate = 10
 paginatePath = "page"
 
 # Enable Disqus integration
-disqusShortname = "shortname"
-
+#disqusShortname = "shortname"
 
 [permalinks]
 post = "/:year/:month/:day/:filename/"
@@ -67,6 +66,9 @@ errormessage = "Submitting form failed!"
 optin = true #opt-in: true/false
 
 [params]
+# Enable Commento Host
+commentoHost = "commento.io"
+
 # bootswatch theme name, unmark and select one: cerulean, cosmo, cyborg, darkly,
 # default, flatly, journal,  lumen, paper, readable, sandstone, simplex,
 # slate, spacelab, superhero, united, yeti.
